--- a/src/scss/actor-sheet.scss
+++ b/src/scss/actor-sheet.scss
@@ -1,120 +1,386 @@
-.abf.sheet.actor {
-  min-width: 765px;
-  min-height: 700px;
-}
+@import "variable.scss";
 
-.header-filds {
-  margin: 10px;
-  margin-bottom: 0;
-  input {
-    border: 0;
-    text-align: center;
-  }
-  ::-webkit-input-placeholder {
-    text-align: center;
-  }
-  .head {
-    height: 250px;
-    grid-template-columns: 160px repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    justify-items: center;
-    align-items: center;
-    .profile {
-      grid-row: 1 / span 2;
-      height: 150px;
-      width: 150px;
-      max-width: 150px;
+.abf.sheet.actor {
+  min-width: 690px;
+  min-height: 800px;
+
+  .header-filds{
+
+// ------------------------
+// ------ALLS TEXTS-------
+// ------------------------
+
+    .text, .text-off, .text-armor, .label-text,
+    .level-number, .xp-number, .max-life, .current-life,
+    .turn, .max-fatigue, .current-fatigue, .class-text{
+      font-weight: 600;
     }
-    .summary {
-      border-left: 4px solid rgb(80, 80, 80);
-      border-bottom: 2px solid rgb(80, 80, 80);
-      height: 100%;
-      width: 100%;
-      grid-column: 2 / span 2;
-      grid-template-rows: 1fr 1fr 1fr;
-      grid-template-columns: 1fr 1fr;
-      justify-items: center;
-      align-items: center;
-      .text_summary{
-          display: flex;
-          justify-content: center;
-          align-content: center;
+
+    .text-off{
+      color: $grey;
+    }
+
+// ------------------------
+// ------ALLS INPUTS-------
+// ------------------------
+
+    input{
+      width: 30px;
+      height: 30px;
+      border: none;
+      ::-webkit-input-placeholder{
+        text-align: center;
+      }
+    }
+
+    .content{
+      display: grid;
+      grid-template-areas:
+      "header-top header-top header-top header-top"
+      "img-profile characteristics resistances CommonResources"
+      "img-profile characteristics resistances CommonResources"
+      "modifiers characteristics armor armor";
+      justify-content: space-evenly;
+
+      .header-top{
+        margin-top: 5px;
+        margin-bottom: 5px;
+        border-bottom: 2px $red-color solid;
+        display: grid;
+        width: 100%;
+        grid-template-columns: 220px 45px 45px 220px 60px 60px;
+        grid-area: header-top;
+        justify-content: center;
+        input{
+          height: 18px;
+          background: transparent;
+          text-align: center;
+          margin: 0;
+          &:focus{
+            box-shadow: 0 5px 3px -3px red;
+          }
+        }
+        h4{
+          margin: 0;
+        }
+        .name{
           width: 100%;
-          span{
-              width: 65px;
+          margin-bottom: 0px;
+          font-size: 18px;
+          border: none;
+          input{
+            height: 30px;
+            width: 100%;
+            text-align: start;
+          }
+        }
+        .dice{
+          width: 100%;
+          text-align: center;
+          font-size: 28px;
+
+        }
+        .class-actor{
+          width: 100%;
+          position: relative;
+          .class-text{
+            height: 100%;
+            &::placeholder{
+              color: transparent;
+            }
+          }
+          .text{
+            position: absolute;
+            top: -10px;
+            left: 15px;
+            display: block;
+          }
+        }
+        .level{
+          width: 100%;
+          position: relative;
+          .level-number{
+            height: 100%;
+          }
+          .text{
+            position: absolute;
+            top: -10px;
+            display: block;
+          }
+        }
+        .experience{
+          width: 100%;
+          position: relative;
+          .xp-number{
+            height: 100%;
+          }
+          .text{
+            position: absolute;
+            top: -10px;
+            display: block;
+          }
+        }
+      }
+
+      .modifiers{
+        height: 65px;
+        width: 145px;
+        display: grid;
+        grid-template-rows: 20px 25px 25px;
+        border-radius: $border-radius;
+        background: $dark-cream;
+        align-items: self-end;
+        justify-items: center;
+        grid-area: modifiers;
+        h3{
+          width: 100%;
+          grid-column: 1 / span 2;
+          text-align: center;
+          color: $white;
+          background: $red-color;
+          border-radius: $border-radius;
+        }
+        input{
+          margin-bottom: 10px;
+          width: 65px;
+          height: 24px;
+          border-radius: $border-radius;
+          background: $light-cream;
+          color: $intensified-red;
+          text-align: center;
+        }
+
+      }
+
+      .characteristics{
+        border-radius: $border-radius;
+        background: $dark-cream;
+        text-align: center;
+        width: 120px;
+        height: 235px;
+        grid-area: characteristics;
+        div{
+          position: relative;
+          align-items: center;
+          label:nth-child(1){
+            margin-left: 5px;
+            position: absolute;
+            left: 8px;
+          }
+          label:last-child{
+            justify-content: center;
+            margin-right: 5px;
+            height: 20px;
+            width: 30px;
+            border-radius: $border-radius;
+            background: $light-cream;
+            position: absolute;
+            right: 6px;
           }
           input{
-              width: 150px;
+            background: $red-color;
+            height: 20px;
+            width: 45px;
+            border-radius: $border-radius;
+            position: absolute;
+            left: 45px;
+            text-align: center;
+            color: $white;
           }
-      }
-      .xp-summary {
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: space-evenly;
-        input {
-          margin-left: 10px;
-          margin-right: 10px;
-          width: 50px;
         }
       }
-      .gnosis {
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: space-evenly;
-        input {
-          margin-left: 10px;
-          margin-right: 10px;
-          width: 50px;
+
+      .resistances{
+        height: 170px;
+        width: 167px;
+        grid-area: resistances;
+        background: $dark-cream;
+        border-radius: $border-radius;
+        h3{
+          border-radius: $border-radius;
+          background: $red-color;
+          color: $white;
+          text-align: center;
         }
+        div{
+          display: flex;
+          margin: 5px;
+          margin-left: 10px;
+          margin-bottom: 2px;
+          label{
+            width: 120px;
+            text-align: left;
+          }
+          input{
+            height: 23px;
+            width: 44px;
+            border-radius: $border-radius;
+            background: $light-cream;
+            text-align: center;
+            color: $black;
+          }
+        }
+      }
+
+      .CommonResources{
+        height: 170px;
+        width: 190px;
+        background: $dark-cream;
+        border-radius: $border-radius;
+        grid-area: CommonResources;
+        .text, .text-off{
+          font-size: 13px;
+          text-align: center;
+        }
+        input{
+          height: 25px;
+          border-radius: $border-radius;
+          background: $light-cream;
+          justify-self: center;
+        }
+        .lifePoints{
+          margin: 1px;
+          margin-top: 7px;
+          display: grid;
+          grid-template-columns: 65px 115px;
+          grid-template-rows: 16px 25px;
+          position: relative;
+          .max-life{
+            text-align: center;
+            background: $red-color;
+            color: $white;
+            z-index: 10;
+            width: 50px;
+          }
+          .current-life{
+            color: $black;
+            text-align: center;
+            position: absolute;
+            left: 35px;
+            top: 16px;
+            width: 138px;
+            z-index: 0;
+          }
+        }
+        .turns{
+          display: grid;
+          grid-template-columns: repeat(3, 65px);
+          grid-auto-rows: 15px 18px 23px;
+          margin-bottom: 7px;
+          .text{
+            grid-column: 1 / span 3;
+            margin: 0;
+          }
+          .text-off{
+            margin: 0;
+          }
+          input{
+            width: 50px;
+            text-align: center;
+            color: $black;
+          }
+          .base{
+            background: $red-color;
+            color: $white;
+          }
+        }
+        .fati-movem{
+          text-align: center;
+          .fatigue{
+            position: relative;
+
+            .max-fatigue{
+              position: absolute;
+              background: $red-color;
+              color: $white;
+              text-align: center;
+              left: 7px;
+            }
+            .current-fatigue{
+              width: 70px;
+              margin-right: 10px;
+              color: $intensified-red;
+              text-align: center;
+              padding-left: 30px;
+            }
+          }
+          .movement{
+            position: relative;
+            .box-movement{
+              input{
+                width: 80px;
+              }
+              span{
+                position: absolute;
+                right: 12px;
+                top: 34px;
+              }
+            }
+          }
+        }
+      }
+
+      .armor{
+        height: 50px;
+        width: 375px;
+        margin-top: 14px;
+        border-radius: $border-radius;
+        background: $dark-cream;
+        grid-area: armor;
+        .label-text{
+          height: 20px;
+          background: $red-color;
+          border-radius: $border-radius;
+          color: $white;
+          .text{
+            text-align: center;
+          }
+          .text-armor{
+            margin-left: 10px;
+            margin-right: 10px;
+          }
+        }
+        .AT{
+          display: grid;
+          grid-template-columns: 84px repeat(7, 42px);
+          margin-top: 3px;
+          input{
+            border-radius: $border-radius;
+            color: $black;
+            background: $light-cream;
+            justify-self: center;
+            width: 28px;
+            height: 25px;
+            text-align: center;
+          }
+          .nameArmor{
+            width: 75px;
+            text-align: left;
+          }
+        }
+      }
+
+      .img-profile{
+        min-width: 145px;
+        min-height: 145px;
+        grid-area: img-profile
       }
     }
-    .common.resources {
-      border-right: 4px solid rgb(80, 80, 80);
-      border-left: 4px solid rgb(80, 80, 80);
-      border-top: 2px solid rgb(80, 80, 80);
-      width: 100%;
-      height: 100%;
-      grid-template-columns: 1fr 1fr;
-      grid-template-rows: 1fr 1fr 1fr;
-      justify-items: center;
-      align-items: center;
-      text-align: center;
-      .life {
-        width: 100px;
-        grid-column: 1 / span 2;
+
+    .sheet-tabs{
+      border-top: 1px solid $red-color;
+      border-bottom: 1px solid $red-color;
+      .item{
+        background: transparent;
+        border-radius: $border-radius;
+        color: $black;
       }
-      div {
-        display: flex;
-        justify-content: space-around;
-        width: 100%;
-        span {
-          width: 55px;
-        }
-        input {
-          width: 50px;
-        }
-      }
-    }
-    .mod {
-      border-top: 2px solid rgb(80, 80, 80);
-      width: 100%;
-      height: 100%;
-      grid-template-columns: 1fr 1fr;
-      grid-template-rows: 1fr 1fr 1fr 1fr;
-      justify-items: center;
-      align-items: center;
-      input {
-        width: 70px;
-      }
-      div {
-        grid-row: 1 / span 4;
-        border: none;
-        i {
-          font-size: 100px;
-        }
+      .active{
+        text-shadow: none;
+        background-color: $red-color;
+        color: $white;
       }
     }
   }
+
 }
