--- a/src/scss/variable.scss
+++ b/src/scss/variable.scss
@@ -1,6 +1,46 @@
-.grid {
-    display: grid
+// -------------------
+// ------COLORS-------
+// -------------------
+
+$red-color: #6e2917;
+$dark-cream: #dcd7b7;
+$light-cream: #e7e5da;
+$Gold: #9f9c87; 
+$intensified-red: #ff0000;
+$black: #000000;
+$white: #ffffff;
+$grey:  #808080;
+$border-radius: 10px;
+
+// -----------------------
+// ------CLASS GRID-------
+// -----------------------
+.grid-1col {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-rows: 1fr;
 }
+.grid-2col {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 1fr;
+}
+
+.grid-3col {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 1fr;
+}
+
+.grid-4col {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: 1fr;
+}
+
+// ----------------------------
+// -------ROLLABLE CLASS-------
+// ----------------------------
 
 .rollable{
     cursor: pointer;
@@ -9,6 +49,12 @@
         text-shadow: 0 0 8px red;
     }
 }
+
+
+// ---------------------------
+// ------BACKGORUDCOLOR-------
+// ---------------------------
+
 .window-app .window-content{
-    background: radial-gradient(circle, rgb(202, 202, 202), rgb(58, 57, 57))
+    background: $light-cream; 
 }
