--- a/src/templates/actor-sheet.html
+++ b/src/templates/actor-sheet.html
@@ -8,8 +8,8 @@
 				<h2 class="name text"><input type="text"  name="name" value="{{actor.name}}"></h2>
 
 				{{!-- Dices --}}
-				<i class="fas fa-dice-d20 dice rollable" data-roll="1d10"></i>
-				<i class="fas fa-dice-d20 dice rollable" data-roll="1d100xa"></i>
+				<div class="dice"><img src="\systems\animabf\assets\dice.png" class="rollable" data-roll="1d10"><span style="left:14px">10</span></div>
+				<div class="dice"><img src="\systems\animabf\assets\dice.png" class="rollable" data-roll="1d100xa"><span>100</span></div>
 
 				{{!-- Class --}}
 				<div class="class-actor flexrow">
