--- a/src/scss/secondaries.scss
+++ b/src/scss/secondaries.scss
@@ -1,29 +1,73 @@
+@import "variable.scss";
+
 .ability{
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    align-items: baseline;
-    div{
-        display: flex;
-        flex-flow: wrap;
-        justify-content: space-evenly;
-        margin-top: 10px;
-        margin-bottom: 10px;
-        width: 100%;
-        .text_group{
-            background-color: black;
-            width: 100%;
-            color: white;
-            text-align: center;
-        }
-        div{
-            input{
-                margin-right: 20px;
-                width: 50px;
+    grid-template-areas: 
+    "athletics intellectual subterfuge creative"
+    "vigor intellectual social creative"
+    "perception intellectual social special";
+    justify-content: space-evenly;
+    margin-top: 10px;
+    align-items: flex-start;
+   .group{
+       width: 150px;
+       background: $dark-cream;
+       border-radius: $border-radius;
+       margin-bottom: 15px;
+       display: flex;
+       flex-flow: wrap;
+       justify-content: center;
+       align-items: flex-start;
+       
+       h3{
+           text-align: center;
+           padding: 3px;
+           margin-bottom: 3px;
+           width: 150px;
+           color: $white;
+           border-radius: $border-radius;
+           background: $red-color;
+       }
+       div{
+           text-align: center;
+           width: 140px;
+           display: flex;
+           justify-content: space-evenly;
+            .input_value{
+                width: 45px !important;
+                height: 15px !important;
+                margin-bottom: 3px;
+                border-radius: $border-radius;
+                background: $light-cream;
             }
             label{
-                text-align: center;
-                width: 80px;
+                width: 85px;
             }
-        }
-    }
+       }
+   }
+   .athletics{
+    grid-area: athletics;
+   }
+   .social{
+       grid-area: social;
+   }
+   .perception{
+       grid-area: perception;
+   }
+   .vigor{
+       grid-area: vigor;
+   }
+   .intellectual{
+       grid-area: intellectual;
+   }
+   .subterfuge{
+        grid-area: subterfuge;
+   }
+   .creative{
+       grid-area: creative;
+   }
+   .special{
+       grid-area: special;
+   }
+
 }
