--- a/src/templates/parts/secondaries.html
+++ b/src/templates/parts/secondaries.html
@@ -2,7 +2,7 @@
     {{!-- Athletics --}}
 
     <div class="athletics group">
-        <h3 class="text">{{localize "anima.athleticAbilities"}}</h3>
+        <h3 class="text text-box">{{localize "anima.athleticAbilities"}}</h3>
         {{#each data.secondaries.athletics as |atr key|}}
         <div>
             <label for="data.secondaries.athletics.{{key}}.value" class="rollable"
@@ -17,7 +17,7 @@
     {{!-- Social --}}
 
     <div class="social group">
-        <h3 class="text">{{localize "anima.socialAbilities"}}</h3>
+        <h3 class="text text-box">{{localize "anima.socialAbilities"}}</h3>
         {{#each data.secondaries.social as |atr key|}}
         <div>
             <label for="data.secondaries.social.{{key}}.value" class="rollable"
@@ -32,7 +32,7 @@
     {{!-- Perception --}}
 
     <div class="perception group">
-        <h3 class="text">{{localize "anima.perceptionAbilities"}}</h3>
+        <h3 class="text text-box">{{localize "anima.perceptionAbilities"}}</h3>
         {{#each data.secondaries.perception as |atr key|}}
         <div>
             <label for="data.secondaries.perception.{{key}}.value" class="rollable"
@@ -47,7 +47,7 @@
     {{!-- Vigor --}}
 
     <div class="vigor group">
-        <h3 class="text">{{localize "anima.vigorAbilities"}}</h3>
+        <h3 class="text text-box">{{localize "anima.vigorAbilities"}}</h3>
         {{#each data.secondaries.vigor as |atr key|}}
         <div>
             <label for="data.secondaries.vigor.{{key}}.value" class="rollable"
@@ -62,7 +62,7 @@
     {{!-- Intellectual --}}
 
     <div class="intellectual group">
-        <h3 class="text">{{localize "anima.intellectualAbilities"}}</h3>
+        <h3 class="text text-box">{{localize "anima.intellectualAbilities"}}</h3>
         {{#each data.secondaries.intellectual as |atr key|}}
         <div>
             <label for="data.secondaries.intellectual.{{key}}.value" class="rollable"
@@ -77,7 +77,7 @@
     {{!-- Subterfuge --}}
 
     <div class="subterfuge group">
-        <h3 class="text">{{localize "anima.subterfugeAbilities"}}</h3>
+        <h3 class="text text-box">{{localize "anima.subterfugeAbilities"}}</h3>
         {{#each data.secondaries.subterfuge as |atr key|}}
         <div>
             <label for="data.secondaries.subterfuge.{{key}}.value" class="rollable"
@@ -92,7 +92,7 @@
     {{!-- Creative --}}
 
     <div class="creative group">
-        <h3 class="text">{{localize "anima.creativeAbilities"}}</h3>
+        <h3 class="text text-box">{{localize "anima.creativeAbilities"}}</h3>
         {{#each data.secondaries.creative as |atr key|}}
         <div>
             <label for="data.secondaries.creative.{{key}}.value" class="rollable"
@@ -104,17 +104,19 @@
         {{/each}}
     </div>
 
-    {{!-- Special --}}
+    {{!-- Special --}} 
 
     <div class="special group">
-        <h3 class="text">{{localize "anima.special"}}</h3>
-        {{#each data.secondaries.special as |atr key|}}
-        <div>
-            <label for="data.secondaries.special.{{key}}.value" class="rollable"
-                data-roll="1d100xa+@secondaries.special.{{key}}.value" data-label="{{key}}">
-                {{localize (concat "anima." key)}}
+        <div class="special-control">
+            <h3 class="text">{{localize "anima.special"}}</h3>
+            <a data-type="skill" class="skillcreate"><i class="fas fa-plus"></i></a>
+        </div>
+        {{#each items as |skill id|}}
+        <div class="skill-item item" data-item-id="{{skill._id}}">
+            <label for="skill._id" class="rollable"data-roll="1d100xa+@skill.value" data-label="{{skill._id}}">
+                {{skill.name}}
             </label>
-            <input type="text" name="data.secondaries.special.{{key}}.value"  class="input_value" value="{{atr.value}}" data-dtype="Number" />
+            <input type="text" name="{{skill._id.value}}"  class="input_value" value="{{skill._id.value}}" data-dtype="Number" />
         </div>
         {{/each}}
     </div>
