--- a/src/templates/actor-sheet.html
+++ b/src/templates/actor-sheet.html
@@ -28,7 +28,7 @@
 					<h4 class="text">{{localize "anima.experience"}}:</h4>
 					<input type="number" class="xp-number" value="{{data.description.experience.value}}" name="data.description.experience.value" data-dtype="Number">		
 				</div>
-			</div>
+			</div> 
 
 
 			<img src="{{actor.img}}" class="img-profile" data-edit="img" title="{{actor.name}}" height="145" width="145">
@@ -48,7 +48,7 @@
 				<div class="flexrow">
 					<label for="data.characteristics.primaries.{{key}}.value" class="rollable text" data-roll="1d10+@characteristics.primaries.{{key}}.value" data-label="{{key}}">{{localize (concat "anima." key)}}</label>
 					<input type="number" name="data.characteristics.primaries.{{key}}.value" value="{{atr.value}}" data-dtype="Number">
-					<label for="data.characteristics.primaries.{{key}}.value" class="bonus text">+40</label>
+					<label for="data.characteristics.primaries.{{key}}.value" class="bonus text">{{numberFormat key.mod decimals=0 sign=true}}</label>
 				</div>
 				{{/each}}
 			</div>
