Avanzando en misticos
Estamos en ello

--- a/src/templates/parts/domine.html
+++ b/src/templates/parts/domine.html
@@ -159,7 +159,7 @@
 <div>
     <ul id="KiUL">
         <li><span class="caret">
-            <input type="checkbox" id="cbox2" value="data.domine.useOfKi.value"> 
+            <input type="checkbox" id="cbox2" value="{{data.domine.useOfKi.value}}" checked="data.domine.kiControl.value"> 
             <label for="cbox2">Uso del Ki</label></span>
             {{#if data.domine.useOfKi.value}}
           <ul class="nested">
