comentarios añadidos a domine

--- a/src/templates/parts/domine.html
+++ b/src/templates/parts/domine.html
@@ -1,3 +1,5 @@
+<!--Tabla de acus y Ki total-->
+
 <div>
     <table class="Acus">
         <tr>
@@ -52,6 +54,8 @@
     
     </table>
 </div>
+
+<!--Sellos de invocación-->
 
 <div>
     <table class="Sellos">
@@ -113,6 +117,8 @@
     </table>
 </div>
 
+<!--Esto como si lo borras-->
+
 <div>
     <form>
         <input type="text" value="Nombre Tecnica">
@@ -155,6 +161,8 @@
     </form>
     <button>Añadir tecnica</button>
 </div>
+
+<!--Arbol del Ki-->
 
 <div>
     <ul id="KiUL">
@@ -500,6 +508,8 @@
         </li>
     </ul>
 </div>
+
+<!--Arbol del nemesis-->
 
 <div>
     <ul id="NemesisUl">
