refactor: rename data-on-click triggers

--- a/src/templates/parts/mystic.html
+++ b/src/templates/parts/mystic.html
@@ -304,7 +304,7 @@
       <th>Libre acceso</th>
       <th>
         <img
-          id="add-free-access-spell"
+          data-on-click="add-free-access-spell"
           src="\systems\animabf\assets\images\boton-plus.png"
           alt="+"
         />
