--- a/src/templates/parts/secondaries.html
+++ b/src/templates/parts/secondaries.html
@@ -115,7 +115,7 @@
         {{#each data.skill as |skill|}}
         <div class="skill-item item">
             <label class="rollable" name='data.skill.{{skill._id}}.name'
-                data-roll="1d100xa+@skill.data.value">
+                data-roll="1d100xa+{{skill.data.value}}">
                 {{skill.name}}
             </label>
             <input type="number" class="input_value" name='data.dynamic.skill.{{skill._id}}.data.value' value="{{skill.data.value}}" />
