Commit what's done so far

--- a/src/scss/animabf.scss
+++ b/src/scss/animabf.scss
@@ -1,4 +1,4 @@
 @import "actor-sheet.scss";
 @import "secondaries.scss";
-@import "main.scss";
-@import "variable.scss"
+@import "variable.scss";
+@import "mentalism.scss";
