--- a/src/scss/variable.scss
+++ b/src/scss/variable.scss
@@ -60,7 +60,7 @@ $border-radius: 10px;
 }
 .abf.sheet.actor {
 // ------------------------
-// ------ALLS INPUTS-------
+// ------ALL INPUTS-------
 // ------------------------
 
     input{
@@ -73,7 +73,7 @@ $border-radius: 10px;
     }
 
 // ------------------------
-// ------ALLS TEXTS--------
+// ------ALL TEXTS--------
 // ------------------------
 
     .text, .text-off, .text-armor, .label-text,
