--- a/src/templates/actor-sheet.html
+++ b/src/templates/actor-sheet.html
@@ -136,7 +136,7 @@
 				<a class="item" data-tab="combat">{{localize "anima.combat"}}</a>
 				<a class="item" data-tab="mystic">{{localize "anima.mystic"}}</a>
 				<a class="item" data-tab="domine">{{localize "anima.domine"}}</a>
-				<a class="item" data-tab="elan">{{localize "anima.elan"}}</a>
+				<a class="item" data-tab="psychic">{{localize "anima.psychics"}}</a>
 			</nav>
 			{{!-- Sheet Body --}}
 			<section class="sheet-body">
@@ -166,9 +166,9 @@
 					{{> "systems/animabf/templates/parts/domine.html"}}
 				</div>
 
-				{{!-- Elan Tab --}}
-				<div class="tab elan" data-group="primary" data-tab="elan">
-					{{> "systems/animabf/templates/parts/elan.html"}}
+				{{!-- Psychics Tab --}}
+				<div class="tab psychics" data-group="primary" data-tab="psychic">
+					{{> "systems/animabf/templates/parts/psychic.hbs"}}
 				</div>
 
 			</section>
